# NUANCE_GMS_MCP

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  installation.md
examples/: 07_voice_acquisition.py  08_voice_confirmed_stage_moves.py
src/gms_mcp/: __init__.py  client.py  dm_plugin.py  server.py  simulator.py  voice.py
tests/: test_gms_mcp.py
