[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuance-gms-mcp"
version = "0.1.2"
description = "Model Context Protocol server for Gatan Microscopy Suite 3.60 — multimodal TEM/STEM/EELS/4D-STEM control via local LLMs"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Roberto dos Reis",    email = "roberto.reis@northwestern.edu" },
    { name = "Vinayak P. Dravid",   email = "v-dravid@northwestern.edu"        },
]
keywords = [
    "electron microscopy", "TEM", "STEM", "4D-STEM", "EELS",
    "MCP", "model context protocol", "LLM", "Ollama",
    "Gatan", "DigitalMicrograph", "autonomous microscopy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.1.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
ollama = [
    "langchain-ollama>=1.0.0",
    "langchain-mcp-adapters>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
voice = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.4.7",
]
zmq = [
    "pyzmq>=24.0.0",
]
analysis = [
    "ncempy>=1.10.0",
    "hyperspy>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
all = [
    "nuance-gms-mcp[ollama,voice,zmq,analysis,dev]",
]

[project.urls]
Homepage      = "https://github.com/NUANCE-IT/NUANCE_GMS_MCP"
Documentation = "https://github.com/NUANCE-IT/NUANCE_GMS_MCP/blob/main/docs/index.md"
Repository    = "https://github.com/NUANCE-IT/NUANCE_GMS_MCP"
"Bug Tracker" = "https://github.com/NUANCE-IT/NUANCE_GMS_MCP/issues"
Paper         = "https://arxiv.org/abs/2025.XXXXX"

[project.scripts]
gms-mcp = "gms_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gms_mcp" = ["py.typed"]

# ── Ruff (linting + formatting) ─────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
]
ignore = [
    "E501",     # line length (handled by formatter)
    "B008",     # function calls in default arguments (Pydantic Field())
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "ollama: tests that require a running Ollama service and model",
]
addopts = "-v --tb=short"
